--- a/roles/certs-generation/tasks/main.yml
+++ b/roles/certs-generation/tasks/main.yml
@@ -3,8 +3,8 @@
 - name: Generate CA
   include_tasks: generate_ca.yml
 
-- name: Distribute CA
-  include_tasks: distribute_ca.yml
-
-- name: Generate certificates
-  include_tasks: generate_certs.yml
+#- name: Distribute CA
+#  include_tasks: ../../install-kafka/tasks/distribute_ca.yml
+#
+#- name: Generate certificates
+#  include_tasks: ../../install-kafka/tasks/generate_certs.yml
