--- a/roles/install-kafka/defaults/main.yml
+++ b/roles/install-kafka/defaults/main.yml
@@ -8,3 +8,11 @@ kafka_log_path: "{{ kafka_path }}/kafka.log"
 logs_dir: "{{ kafka_path }}/data/logs"
 metadata_dir: "{{ kafka_path }}/data/metadata"
 stop_kafka_server_path: "{{ kafka_path }}/bin/kafka-server-stop.sh"
+kafka_jaas_path: "{{ kafka_path }}/config/jaas.conf"
+kafka_config_script_path: "{{ kafka_path}}/bin/kafka-configs.sh"
+sasl_env_string: "-Djava.security.auth.login.config={{ kafka_jaas_path }}"
+metrics_env_string: "-javaagent:{{ exporter_dir }}/jmx_prometheus_javaagent-{{ metrics_jmx_version }}.jar={{ metrics_jmx_port }}:{{ jmx_exporter_config }}"
+exporter_repo_url: "https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/{{ metrics_jmx_version }}/jmx_prometheus_javaagent-{{ metrics_jmx_version }}.jar"
+nginx_path: "/etc/nginx"
+sites_available_path: "{{ nginx_path }}/sites-available"
+sites_enabled_path: "{{ nginx_path }}/sites-enabled"
