--- a/roles/install-kafka/vars/main.yml
+++ b/roles/install-kafka/vars/main.yml
@@ -5,3 +5,7 @@ scala_version: "2.13"
 kafka_archive: "kafka_{{ scala_version }}-{{ kafka_version }}.tgz"
 kafka_url: "https://downloads.apache.org/kafka/{{ kafka_version }}/{{ kafka_archive }}"
 truststore_file: "truststore.jks"
+exporter_dir: "/opt/kafka-exporter"
+jmx_exporter_config: "{{ exporter_dir }}/kafka_jmx_exporter.yaml"
+start_kafka_local_path: "{{ playbook_dir }}/kafka-server-start.sh"
+jmx_exporter_nginx_config: "{{ sites_available_path }}/jmx_exporter"
